<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@android:color/holo_blue_dark"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/Arrow_Back_Button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:id="@+id/Title_Text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/AddReward"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"/>

</LinearLayout>

<EditText
    android:id="@+id/Edit_Title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Reward_Name"
    android:inputType="text"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/Edit_Point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/Reward_Point"
        android:inputType="number" />

    <Spinner
        android:id="@+id/Spinner_Reward_Type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:entries="@array/Reward_Types" />
</LinearLayout>

<EditText
    android:id="@+id/Edit_Tag"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="@string/Reward_Tag"
    android:inputType="text" />

<Button
    android:id="@+id/Submit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/Reward_Finish" />

</LinearLayout>